# libcmap

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile.am  ProjectHome.md  README.md  bootstrap  configure.ac  map.c  map.h  map_axdr.c  map_types.c
.github/workflows/: checks.yml  ci.yml
include/: libcmap.h
include/libcmap/: orderedmap.h
src/: CMakeLists.txt  orderedmap.c  orderedmap_types.c
tests/: CMakeLists.txt  Makefile.am.inc  test_orderedmap.cpp
